--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/dwashkarma/ui-fusion"
+    "url": "https://github.com/dwashkarma/nova-ui.git"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
