--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "keywords": ["tron","tron-ui"],
   "repository": {
     "type": "git",
     "url": "https://github.com/dwashkarma/nova-ui.git"
