--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "tron-ui",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": false,
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
-  "keywords": ["tron","tron-ui"],
+  "keywords": [
+    "tron",
+    "tron-ui"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/dwashkarma/nova-ui.git"
