--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/dwashkarma/nova-ui.git"
+    "url": "https://github.com/dwashkarma/tron-ui.git"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
