--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "files": [  
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "keywords": [
     "tron",
     "tron-ui"
